--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
     "prop-types": "15.6.0",
-    "react-router-dom": "4.2.2"
+    "react-router-dom": "4.2.2",
+    "styled-components": "3.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
