--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-scripts": "1.1.0",
     "prop-types": "15.6.0",
     "react-router-dom": "4.2.2",
-    "styled-components": "3.1.6"
+    "styled-components": "3.1.6",
+    "react-overdrive": "0.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
